# CC

./: build.gradle  cc-settings-demo.gradle  gradle.properties  settings.gradle
aidlone/: build.gradle
aidlone/src/main/: AndroidManifest.xml
aidlone/src/main/aidl/tv/bangumi/aidl/: IBookArriveListener.aidl  IBookManager.aidl
aidlone/src/main/debug/: AndroidManifest.xml
aidlone/src/main/java/tv/bangumi/aidl/: Book.java  IIBookManager.java
aidlone/src/main/java/tv/bangumi/aidlone/: MainActivity.java
aidlone/src/main/res/layout/: act_main.xml
aidlone/src/main/res/values/: strings.xml
aidltwo/: build.gradle
aidltwo/src/main/: AndroidManifest.xml
aidltwo/src/main/aidl/tv/bangumi/aidl/: Book.aidl  IBookManager.aidl
aidltwo/src/main/debug/: AndroidManifest.xml
aidltwo/src/main/java/tv/bangumi/aidl/: Book.java  IIBookManager.java
aidltwo/src/main/res/layout/: act_main.xml
aidltwo/src/main/res/values/: strings.xml
cc/: build.gradle
component_jetpack/: build.gradle
component_jetpack/src/main/: AndroidManifest.xml
component_jetpack/src/main/debug/: AndroidManifest.xml
component_jetpack/src/main/res/layout/: jetpack_act_main.xml
demo/: build.gradle
demo_component_a/: build.gradle
demo_component_b/: build.gradle
demo_component_jsbridge/: build.gradle
demo_component_kt/: build.gradle
demo_diyview/: build.gradle
demo_diyview/src/androidTest/java/tv/bgm/demo_diyview/: ExampleInstrumentedTest.java
demo_diyview/src/main/: AndroidManifest.xml
demo_diyview/src/main/debug/: AndroidManifest.xml
demo_diyview/src/main/java/tv/bgm/demo_diyview/: MainActivity.java
demo_diyview/src/main/res/anim/: alphaanim.xml  rotateanim.xml  scaleanim.xml  setanim.xml  translateanim.xml
demo_diyview/src/main/res/layout/: act_chapter_one.xml  act_chapter_two.xml  act_main.xml
demo_diyview/src/main/res/values/: strings.xml
demo_diyview/src/test/java/tv/bgm/demo_diyview/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/tv/bangumi/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: native-lib.cpp
ffmpeg/src/main/debug/: AndroidManifest.xml
ffmpeg/src/main/java/tv/bangumi/ffmpeg/: MainActivity.java
ffmpeg/src/main/res/layout/: act_main.xml
ffmpeg/src/test/java/tv/bangumi/ffmpeg/: ExampleUnitTest.java
regex/: build.gradle
regex/src/androidTest/java/tv/bangumi/regex/: ExampleInstrumentedTest.java
regex/src/main/: AndroidManifest.xml
regex/src/main/java/tv/bangumi/regex/: Test.kt
regex/src/main/res/values/: strings.xml
regex/src/test/java/tv/bangumi/regex/: ExampleUnitTest.java
(+44 files in other folders)
